[package]
name = "fercord"
version = "0.1.0"
edition = "2021"
exclude = [
    ".testdata",
    ".config"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1", features = ["default", "rt-multi-thread"]}
config = { version = "0.13", default-features = false, features = ["toml"] }
anyhow = "1"
serde = { version = "1", features = ["derive"]}
