[workspace]
members = ["fercord_storage", "fercord_bot", "fercord_api", "fercord_common"]
default-members = ["fercord_storage", "fercord_common", "fercord_bot"]
resolver = "2"

[workspace.package]
readme = "README.md"
authors = ["Jonas Van der Aa <jonas@vdaa.website>"]
keywords = ["discord", "bot"]
license = "GPL-3.0-or-later"
description = "A Discord bot written in Rust."
edition = "2021"
repository = "https://github.com/kekonn/fercord"

[workspace.dependencies]
poise = "0.6"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["default", "env-filter"]}
interim = { version = "0.2", features = ["default", "chrono_0_4"]}
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"]}
tokio-stream = "0.1"
rstest = "0.25"

fercord_common = { path = "./fercord_common", version = "0.1"}
fercord_storage = { path = "./fercord_storage", version = "0.3"}

[workspace.dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Add serde support
]

[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "time"]

[workspace.dependencies.anyhow]
version = "1"
features = ["backtrace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "debuginfo"

# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
debug = true
split-debuginfo = "packed"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace.metadata.release]
sign-commit = true
sign-tag = true
allow-branch = ["main"]
enable-features = ["default"]
