[package]
name = "fercord_bot"
version = "0.3.0"
description = "A Discord bot written in Rust, for personal use"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = ["fercord_storage/sqlite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fercord_storage = { path = "../fercord_storage", version = "0.3"}
poise = { workspace = true}
config = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
tracing = { workspace = true }
tracing-subscriber = {version = "0.3", features = ["default", "env-filter"]}
chrono = { workspace = true }
chrono-tz = { workspace = true }
chrono-english = "0.1"
reqwest = { version = "0.11", features = ["stream", "rustls-tls"]}
clap = { version = "4", features = ["derive", "env"] }

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "time"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.anyhow]
version = "1"
features = ["backtrace"]

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Add serde support
]