[package]
name = "fercord_bot"
version = "0.4.0"
description = "A Discord bot written in Rust, for personal use"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[features]
default = ["fercord_storage/sqlite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fercord_storage = { workspace = true }
fercord_common = { workspace = true }
poise = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
interim = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = {version = "0.3", features = ["default", "env-filter"]}
rand = "0.8"


[dev-dependencies]
rstest = { workspace = true }
