[package]
name = "fercord_common"
version = "0.1.0"
description = "Crate with common types used by the Fercord bot"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
tracing = { workspace = true }
tracing-subscriber = {version = "0.3", features = ["default", "env-filter"]}
reqwest = { version = "0.12", features = ["stream", "rustls-tls"]}
clap = { workspace = true }
thiserror = { workspace = true }

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Add serde support
]
