[package]
name = "fercord_common"
version = "0.1.3"
description = "Crate with common types used by the Fercord bot"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10", features = ["env", "toml", "test"]}
serde = { workspace = true}
serde_json = { workspace = true}
tracing = { workspace = true }
tracing-subscriber = {version = "0.3", features = ["default", "env-filter"]}
reqwest = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
