[package]
name = "fercord_storage"
description = "Storage crate for Fercord"
include = [
    "src/**/*.rs",
    "*.md",
    "Cargo.toml",
    "migrations/**"
]
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
version = "0.3.3"

[features]
default = ["sqlite"]
sqlite = ["sqlx-oldapi/sqlite"]
postgres = ["sqlx-oldapi/postgres"]

[dependencies]
poise = { workspace = true}
config = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
fercord_common = { path = "../fercord_common", version = "0.1"}
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "json"] }

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "time"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.anyhow]
version = "1"
features = ["backtrace"]

[dependencies.sqlx-oldapi]
version = "0.6"
features = ["default", "chrono", "runtime-tokio-native-tls", "any"]

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Add serde support
]
