[package]
name = "fercord_storage"
description = "Storage crate for Fercord"
include = [
    "src/**/*.rs",
    "*.md",
    "Cargo.toml",
    "migrations/**"
]
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
version = "0.3.4"

[features]
default = ["sqlite"]
sqlite = ["sqlx-oldapi/sqlite"]
postgres = ["sqlx-oldapi/postgres"]

[dependencies]
poise = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
fercord_common = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "json"] }

[dependencies.sqlx-oldapi]
version = "0.6"
features = ["default", "chrono", "runtime-tokio-native-tls", "any"]
